Fix incorrect assertion in operationRegExpExecNonGlobalOrSticky(). https://bugs.webkit.org/show_bug.cgi?id=203230 <rdar://problem/56460749>

Reviewed by Robin Morisset.

JSTests:

* stress/incorrect-exception-assertion-in-operationRegExpExecNonGlobalOrSticky.js: Added.

Source/JavaScriptCore:

operationRegExpExecNonGlobalOrSticky() was asserting no exception when
createRegExpMatchesArray() returns null.  createRegExpMatchesArray() only returns
null when RegExp::matchInline() returns -1.  The only way RegExp::matchInline()
can return -1 is via a throwError() helper which throws an exception.  The other
return path in RegExp::matchInline() explicitly ASSERT(result >= -1).  Hence, the
assertion in operationRegExpExecNonGlobalOrSticky() is wrong.

* dfg/DFGOperations.cpp:



Canonical link: https://commits.webkit.org/216648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251411 268f45cc-cd09-0410-ab3c-d52691b4dbfc